Add basic template with backlinks

--- a/todo.txt
+++ b/todo.txt
@@ -5,5 +5,5 @@ TODO: template css
 TODO: publishing script (assume on server)
 TODO: remove #public tag
 TODO: footnotes citations?
-STRT: manual backlinks (add to data?)
+DONE: manual backlinks (add to data?)
     TODO: then add to YAML, use in template
