--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,10 @@
 TODO: copy images into res folder
 TODO: change formating for image links
-TODO: template html
+STRT: template html
 TODO: template css
+TODO: copy css into res folder
 TODO: publishing script (assume on server)
-TODO: remove #public tag
-TODO: footnotes citations?
+DONE: remove #public tag
+DONE: footnotes citations?
 DONE: manual backlinks (add to data?)
-    TODO: then add to YAML, use in template
+    DONE: then add to YAML, use in template
