--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,8 @@ STRT: template html
 TODO: template css
 TODO: copy css into res folder
 TODO: publishing script (assume on server)
+TODO: include date modified timestamp for each file
+    https://serverfault.com/questions/401437/how-to-retrieve-the-last-modification-date-of-all-files-in-a-git-repository
 DONE: remove #public tag
 DONE: footnotes citations?
 DONE: manual backlinks (add to data?)
