--- a/todo.txt
+++ b/todo.txt
@@ -5,10 +5,11 @@ DONE: template html
 DONE: template css
 DONE: copy css into res folder
 TODO: publishing script (assume on server)
+    TODO: allow adding to an update RSS feed
 DONE: include date modified timestamp for each file
     https://serverfault.com/questions/401437/how-to-retrieve-the-last-modification-date-of-all-files-in-a-git-repository
 DONE: remove #public tag
 DONE: footnotes citations?
 DONE: manual backlinks (add to data?)
     DONE: then add to YAML, use in template
-TODO: robots.txt
+DONE: robots.txt
