--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 DONE: find a font!
-TODO: copy images into res folder
+STRT: copy images into res folder
 TODO: change formating for image links
 DONE: template html
 DONE: template css
